使用 Colab 创建而成

--- a/notebooks/BindCraft.ipynb
+++ b/notebooks/BindCraft.ipynb
@@ -21,10 +21,10 @@
       "metadata": {
         "cellView": "form",
         "id": "7fMzl8JiyaXm",
-        "outputId": "974ac149-8f98-449c-a09e-7895b0e04e0b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "974ac149-8f98-449c-a09e-7895b0e04e0b"
       },
       "outputs": [
         {
@@ -98,10 +98,10 @@
       "metadata": {
         "cellView": "form",
         "id": "01IH64-ycCQY",
-        "outputId": "9a09dbc9-68ab-4bc8-e203-2baf4e9aeea6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "9a09dbc9-68ab-4bc8-e203-2baf4e9aeea6"
       },
       "outputs": [
         {
@@ -132,10 +132,10 @@
       "metadata": {
         "cellView": "form",
         "id": "RbL-S_t2hicj",
-        "outputId": "bc0eb64d-b5d8-4077-8f3d-18570ec18447",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "bc0eb64d-b5d8-4077-8f3d-18570ec18447"
       },
       "outputs": [
         {
@@ -210,10 +210,10 @@
       "metadata": {
         "cellView": "form",
         "id": "qcEjqCIlhire",
-        "outputId": "daf90810-24d9-4208-ef83-a304dafec2e5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "daf90810-24d9-4208-ef83-a304dafec2e5"
       },
       "outputs": [
         {
@@ -282,10 +282,10 @@
       "metadata": {
         "cellView": "form",
         "id": "r-OpCVe4hi5Q",
-        "outputId": "fb432a12-4bfa-4262-afa3-42e13b9157fe",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "fb432a12-4bfa-4262-afa3-42e13b9157fe"
       },
       "outputs": [
         {
@@ -335,10 +335,10 @@
       "metadata": {
         "cellView": "form",
         "id": "LgRFO3EKAnM5",
-        "outputId": "48f5b561-9dc0-4189-d781-ab35c9e12ab0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "48f5b561-9dc0-4189-d781-ab35c9e12ab0"
       },
       "outputs": [
         {
@@ -405,10 +405,10 @@
       "metadata": {
         "cellView": "form",
         "id": "1sOAn_xyEZKo",
-        "outputId": "7f3c4f08-ee80-40dd-dd45-d746706f8859",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7f3c4f08-ee80-40dd-dd45-d746706f8859"
       },
       "outputs": [
         {
@@ -443,10 +443,9 @@
       "metadata": {
         "cellView": "form",
         "id": "ZH2hVVrpzn-o",
-        "outputId": "157b7462-a6fb-4807-892a-c513f49cbc94",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 719,
+          "height": 1000,
           "referenced_widgets": [
             "70f1e32ce44d4b0bb583ac004289350a",
             "32eeefb5cfbc4bd4b0a658827a6fca06",
@@ -457,7 +456,8 @@
             "e7965d3ac77040ae863c46239caffe01",
             "dfc1ce944409479689217982eaafaeb9"
           ]
-        }
+        },
+        "outputId": "157b7462-a6fb-4807-892a-c513f49cbc94"
       },
       "outputs": [
         {
@@ -508,7 +508,26 @@
             "26 models [1] recycles 1 hard 0 soft 0.47 temp 1 loss 4.59 helix 4.75 pae 0.50 i_pae 0.53 con 2.25 i_con 3.46 plddt 0.63 ptm 0.58 i_ptm 0.20 rg -0.09\n",
             "27 models [1] recycles 1 hard 0 soft 0.49 temp 1 loss 4.56 helix 4.83 pae 0.51 i_pae 0.54 con 2.20 i_con 3.49 plddt 0.62 ptm 0.58 i_ptm 0.20 rg -0.08\n",
             "28 models [0] recycles 1 hard 0 soft 0.50 temp 1 loss 4.26 helix 5.22 pae 0.50 i_pae 0.56 con 2.01 i_con 3.54 plddt 0.62 ptm 0.58 i_ptm 0.19 rg -0.20\n",
-            "29 models [1] recycles 1 hard 0 soft 0.52 temp 1 loss 4.22 helix 4.90 pae 0.46 i_pae 0.48 con 2.12 i_con 3.30 plddt 0.67 ptm 0.61 i_ptm 0.27 rg -0.09\n"
+            "29 models [1] recycles 1 hard 0 soft 0.52 temp 1 loss 4.22 helix 4.90 pae 0.46 i_pae 0.48 con 2.12 i_con 3.30 plddt 0.67 ptm 0.61 i_ptm 0.27 rg -0.09\n",
+            "30 models [3] recycles 1 hard 0 soft 0.54 temp 1 loss 4.21 helix 5.60 pae 0.50 i_pae 0.53 con 1.95 i_con 3.58 plddt 0.67 ptm 0.57 i_ptm 0.18 rg 0.11\n",
+            "31 models [4] recycles 1 hard 0 soft 0.56 temp 1 loss 4.08 helix 5.37 pae 0.50 i_pae 0.52 con 1.90 i_con 3.57 plddt 0.65 ptm 0.57 i_ptm 0.19 rg -0.36\n",
+            "32 models [3] recycles 1 hard 0 soft 0.58 temp 1 loss 1.91 helix 6.80 pae 0.20 i_pae 0.17 con 1.65 i_con 2.21 plddt 0.87 ptm 0.79 i_ptm 0.68 rg -0.13\n",
+            "33 models [1] recycles 1 hard 0 soft 0.59 temp 1 loss 4.12 helix 4.70 pae 0.39 i_pae 0.39 con 2.26 i_con 2.94 plddt 0.68 ptm 0.66 i_ptm 0.43 rg 0.24\n",
+            "34 models [2] recycles 1 hard 0 soft 0.61 temp 1 loss 4.66 helix 5.15 pae 0.51 i_pae 0.54 con 2.13 i_con 3.59 plddt 0.63 ptm 0.57 i_ptm 0.19 rg 0.48\n",
+            "35 models [2] recycles 1 hard 0 soft 0.63 temp 1 loss 2.07 helix 6.28 pae 0.23 i_pae 0.19 con 1.70 i_con 2.14 plddt 0.85 ptm 0.77 i_ptm 0.67 rg -0.08\n",
+            "36 models [4] recycles 1 hard 0 soft 0.65 temp 1 loss 4.73 helix 5.00 pae 0.52 i_pae 0.52 con 2.29 i_con 3.62 plddt 0.61 ptm 0.58 i_ptm 0.19 rg -0.06\n",
+            "37 models [3] recycles 1 hard 0 soft 0.67 temp 1 loss 1.57 helix 6.95 pae 0.20 i_pae 0.16 con 1.68 i_con 1.87 plddt 0.87 ptm 0.80 i_ptm 0.71 rg -0.05\n",
+            "38 models [0] recycles 1 hard 0 soft 0.68 temp 1 loss 2.26 helix 6.16 pae 0.23 i_pae 0.21 con 1.70 i_con 2.29 plddt 0.85 ptm 0.77 i_ptm 0.63 rg -0.10\n",
+            "39 models [2] recycles 1 hard 0 soft 0.70 temp 1 loss 2.54 helix 6.36 pae 0.26 i_pae 0.24 con 1.72 i_con 2.59 plddt 0.84 ptm 0.71 i_ptm 0.54 rg -0.10\n",
+            "40 models [3] recycles 1 hard 0 soft 0.72 temp 1 loss 0.95 helix 7.57 pae 0.17 i_pae 0.12 con 1.57 i_con 1.56 plddt 0.90 ptm 0.85 i_ptm 0.79 rg -0.03\n",
+            "41 models [4] recycles 1 hard 0 soft 0.74 temp 1 loss 2.05 helix 6.57 pae 0.22 i_pae 0.19 con 1.65 i_con 2.28 plddt 0.87 ptm 0.77 i_ptm 0.63 rg -0.15\n",
+            "42 models [1] recycles 1 hard 0 soft 0.76 temp 1 loss 3.98 helix 4.35 pae 0.42 i_pae 0.36 con 2.67 i_con 2.26 plddt 0.63 ptm 0.71 i_ptm 0.60 rg 0.33\n",
+            "43 models [0] recycles 1 hard 0 soft 0.77 temp 1 loss 2.10 helix 6.51 pae 0.21 i_pae 0.19 con 1.69 i_con 2.24 plddt 0.87 ptm 0.79 i_ptm 0.65 rg -0.04\n",
+            "44 models [4] recycles 1 hard 0 soft 0.79 temp 1 loss 2.85 helix 5.48 pae 0.36 i_pae 0.31 con 1.95 i_con 2.22 plddt 0.74 ptm 0.70 i_ptm 0.67 rg 0.34\n",
+            "45 models [0] recycles 1 hard 0 soft 0.81 temp 1 loss 2.55 helix 5.41 pae 0.32 i_pae 0.28 con 1.95 i_con 1.92 plddt 0.75 ptm 0.74 i_ptm 0.70 rg 0.38\n",
+            "46 models [1] recycles 1 hard 0 soft 0.83 temp 1 loss 4.09 helix 5.01 pae 0.43 i_pae 0.45 con 2.10 i_con 3.22 plddt 0.68 ptm 0.60 i_ptm 0.27 rg -0.03\n",
+            "47 models [4] recycles 1 hard 0 soft 0.85 temp 1 loss 2.79 helix 5.50 pae 0.40 i_pae 0.35 con 1.97 i_con 2.30 plddt 0.67 ptm 0.68 i_ptm 0.64 rg -0.25\n",
+            "48 models [4] recycles 1 hard 0 soft 0.86 temp 1 loss 2.20 helix 5.66 pae 0.34 i_pae 0.30 con 1.87 i_con 1.87 plddt 0.75 ptm 0.70 i_ptm 0.72 rg -0.15\n"
           ]
         }
       ],
